- 优化UI界面布局与用户体验 - 新增多个传感器